# myrmidon

./: CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  cmake_install.cmake
include/myrmidon/: base_fact.hpp
include/rule_engine/: base_fact.hpp
src/: base_fact.cpp  main.cpp
src/core/: rule.cpp  rule.hpp
tests/: test_base_fact.cpp
tests/core/: test_rule.cpp
